feat: add an endpoint for release information
